--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     build:
       context: ./frontend
     # Uncoment this if you want test some features
-    #volumes:
-      #- ./frontend/src:/app/src
+    volumes:
+      - ./frontend/src:/app/src
     ports:
       - 3000:3000
     
